timezone fixed,section visibility

--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -50,7 +50,7 @@
 
 .shiftEntry .timeSpan {
   font-weight:bold;
-  background-color:rgba($primary-color,0.5);
+  background-color:rgba($primary-color,0);
   padding-bottom:10px;
 }
 
